--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc -p .",
     "watch": "yarn build -- -w",
-    "start": "node dist/index.js"
+    "start": "node dist/index.js",
+    "start-w": "nodemon dist/index.js"
   },
   "author": "ivoelbert",
   "license": "ISC",
